spacing fixes

--- a/src/scss/pages/page-run-a-node.scss
+++ b/src/scss/pages/page-run-a-node.scss
@@ -167,7 +167,7 @@
 	.start-up {
 		padding-top: 0px;
 		padding-bottom: 0px;
-		@include media-breakpoint-down(md) {
+		@include media-breakpoint-down(lg) {
 			padding-top: 70px;
             padding-bottom: 20px;
 		}
@@ -241,7 +241,7 @@
 	.resources {
 		padding-top: 0px;
 		padding-bottom: 140px;
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-down(lg) {
             padding-top: 40px;
             padding-bottom: 60px;
         }
